# airflow-dag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/kind/: cluster.yaml
dags/: example_local_debug.py  k8s_spark_jdbc_table_ingestion.py  tenant_isolated_kubernetes_pod.py
dags/TenanatB/: example_local_debug.py
dags/TenantA/: example_local_debug.py
include/spark-applications/: jdbc-table-ingestion.yaml
plugins/: airflow_local_settings.py
scripts/: install-spark-operator.sh  setup-kind-cluster.sh
src/airflow_dag_project/: __init__.py  k8s.py  settings.py  spark.py  tenancy.py
tests/: conftest.py
tests/integration/: test_airflow_compose.py
tests/unit/: test_dag_integrity.py  test_k8s_submission.py  test_spark_manifest.py
